--- a/pom.xml
+++ b/pom.xml
@@ -11,9 +11,9 @@
   <url>http://github.com/jimmoores/quandl4j</url>
 
   <scm>
-    <connection>scm:git:git://github.com/jimmoores/quandl-java</connection>
-    <developerConnection>scm:git:git://github.com/jimmoores/quandl-java</developerConnection>
-    <url>http://github.com/jimmoores/quandl-java</url>
+    <connection>scm:git:git://github.com/jimmoores/quandl4j</connection>
+    <developerConnection>scm:git:git://github.com/jimmoores/quandl4j</developerConnection>
+    <url>http://github.com/jimmoores/quandl4j</url>
   </scm>
    
   <properties>
@@ -218,24 +218,18 @@
     <dependency>
       <groupId>org.threeten</groupId>
       <artifactId>threetenbp</artifactId>
-        <version>0.9</version>
-      </dependency>
-      <dependency>
-        <groupId>com.opengamma.external.json</groupId>
-        <artifactId>json</artifactId>
-        <version>1.0.0.v20101106</version>
-      </dependency>
-  
+      <version>0.9</version>
+    </dependency>
+    <dependency>
+      <groupId>com.opengamma.external.json</groupId>
+      <artifactId>json</artifactId>
+      <version>1.0.0.v20101106</version>
+    </dependency>  
     <dependency>
       <groupId>org.testng</groupId>
       <artifactId>testng</artifactId>
       <version>6.8.8</version>
       <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>javax.servlet-api</artifactId>
-      <version>3.1.0</version>
     </dependency>
     <dependency>
       <groupId>org.glassfish.jersey.core</groupId>
@@ -248,31 +242,16 @@
         <artifactId>opencsv</artifactId>
         <version>2.3</version>
       </dependency>
-            <dependency>
+      <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-api</artifactId>
         <version>1.7.5</version>
       </dependency>
       <dependency>
         <groupId>ch.qos.logback</groupId>
-        <artifactId>logback-core</artifactId>
-        <version>1.0.13</version>
-      </dependency>
-      <dependency>
-        <groupId>ch.qos.logback</groupId>
         <artifactId>logback-classic</artifactId>
         <version>1.0.13</version>
       </dependency>
-            <dependency>
-        <groupId>javax.ws.rs</groupId>
-        <artifactId>jsr311-api</artifactId>
-        <version>1.1.1</version>
-      </dependency>
-      <!--dependency>
-        <groupId>javax.servlet</groupId>
-        <artifactId>javax.servlet-api</artifactId>
-        <version>3.0.1</version>
-      </dependency-->
       <dependency>
       		<groupId>commons-cli</groupId>
       		<artifactId>commons-cli</artifactId>
