--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.jimmoores</groupId>
   <artifactId>quandl</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.8.0</version>
   <packaging>jar</packaging>
 
   <name>Quandl4J</name>
