--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.jimmoores</groupId>
   <artifactId>quandl</artifactId>
-  <version>0.8.0-SNAPSHOT</version>
+  <version>0.8.1</version>
   <packaging>jar</packaging>
 
   <name>Quandl4J</name>
@@ -12,21 +12,21 @@
   <url>http://quandl4j.org</url>
   
   <licenses>
-	  <license>
-	    <name>Apache License, Version 2.0</name>
-	    <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-	    <distribution>repo</distribution>
-	    <comments>A business-friendly OSS license</comments>
-	  </license>
+    <license>
+      <name>Apache License, Version 2.0</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+      <distribution>repo</distribution>
+      <comments>A business-friendly OSS license</comments>
+    </license>
   </licenses>
   
   <developers>
     <developer>
-	    <id>jimmoores</id>
-	    <name>Jim Moores</name>
-	    <email>jim.moores@gmail.com</email>
-	    <url>http://github.com/jimmoores</url>
-	    <timezone>0</timezone> 
+      <id>jimmoores</id>
+      <name>Jim Moores</name>
+      <email>jim.moores@gmail.com</email>
+      <url>http://github.com/jimmoores</url>
+      <timezone>0</timezone> 
     </developer>
   </developers>
 
@@ -61,8 +61,41 @@
     <maven.compiler.target>1.7</maven.compiler.target>  
   </properties>
   
+  <distributionManagement>
+    <snapshotRepository>
+      <id>ossrh</id>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+    </snapshotRepository>
+  </distributionManagement>
+
   <build>
     <plugins>
+      <!-- plug-in for staging to Nexus -->
+      <plugin>
+        <groupId>org.sonatype.plugins</groupId>
+        <artifactId>nexus-staging-maven-plugin</artifactId>
+        <version>1.6.2</version>
+        <extensions>true</extensions>
+        <configuration>
+          <serverId>ossrh</serverId>
+          <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+          <autoReleaseAfterClose>true</autoReleaseAfterClose>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-gpg-plugin</artifactId>
+        <version>1.5</version>
+        <executions>
+          <execution>
+            <id>sign-artifacts</id>
+            <phase>verify</phase>
+            <goals>
+              <goal>sign</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
       <!-- setup testing -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -183,6 +216,20 @@
           </execution>
         </executions>
       </plugin>
+      <!-- generate javadocs jar when packaging -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <version>2.9.1</version>
+        <executions>
+          <execution>
+            <id>attach-javadocs</id>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
       <!-- run checkstyle in the main build -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -258,26 +305,26 @@
       <version>2.8</version>
       <scope>provided</scope>
     </dependency>
-      <dependency>
-        <groupId>net.sf.opencsv</groupId>
-        <artifactId>opencsv</artifactId>
-        <version>2.3</version>
-      </dependency>
-      <dependency>
-        <groupId>org.slf4j</groupId>
-        <artifactId>slf4j-api</artifactId>
-        <version>1.7.5</version>
-      </dependency>
-      <dependency>
-        <groupId>ch.qos.logback</groupId>
-        <artifactId>logback-classic</artifactId>
-        <version>1.0.13</version>
-      </dependency>
-      <dependency>
-      		<groupId>commons-cli</groupId>
-      		<artifactId>commons-cli</artifactId>
-      		<version>1.2</version>
-      </dependency>
+    <dependency>
+      <groupId>net.sf.opencsv</groupId>
+      <artifactId>opencsv</artifactId>
+      <version>2.3</version>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>1.7.5</version>
+    </dependency>
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+      <version>1.0.13</version>
+    </dependency>
+    <dependency>
+      <groupId>commons-cli</groupId>
+      <artifactId>commons-cli</artifactId>
+      <version>1.2</version>
+    </dependency>
   </dependencies>
   <profiles>
     <!-- apply strict build rules, activated with -Dstrict -->
