--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.jimmoores</groupId>
   <artifactId>quandl</artifactId>
-  <version>0.9.0-SNAPSHOT</version>
+  <version>1.0.0</version>
   <packaging>jar</packaging>
 
   <name>Quandl4J</name>
@@ -59,7 +59,7 @@
     <maven.compiler.compilerVersion>1.7</maven.compiler.compilerVersion>
     <!--maven.compiler.source>1.7</maven.compiler.source-->
     <maven.compiler.target>1.7</maven.compiler.target>  
-    <gpg.skip>true</gpg.skip>
+    <gpg.skip>false</gpg.skip>
   </properties>
   
   <distributionManagement>
