--- a/pom.xml
+++ b/pom.xml
@@ -308,7 +308,13 @@
       <groupId>org.glassfish.jersey.core</groupId>
       <artifactId>jersey-client</artifactId>
       <version>2.8</version>
-      <scope>provided</scope>
+      <!--scope>provided</scope-->
+    </dependency>
+    <dependency>
+      <groupId>org.glassfish.jersey.core</groupId>
+      <artifactId>jersey-common</artifactId>
+      <version>2.8</version>
+      <!--scope>provided</scope-->
     </dependency>
     <dependency>
       <groupId>net.sf.opencsv</groupId>
