--- a/pom.xml
+++ b/pom.xml
@@ -336,6 +336,11 @@
       <artifactId>commons-cli</artifactId>
       <version>1.2</version>
     </dependency>
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.2.2</version>
+    </dependency>
   </dependencies>
   <profiles>
     <!-- apply strict build rules, activated with -Dstrict -->
