--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,7 @@
     <maven.compiler.compilerVersion>1.7</maven.compiler.compilerVersion>
     <!--maven.compiler.source>1.7</maven.compiler.source-->
     <maven.compiler.target>1.7</maven.compiler.target>  
-    <!--gpg.skip>true</gpg.skip-->
+    <gpg.skip>true</gpg.skip>
   </properties>
   
   <distributionManagement>
