--- a/pom.xml
+++ b/pom.xml
@@ -292,11 +292,6 @@
       <groupId>org.threeten</groupId>
       <artifactId>threetenbp</artifactId>
       <version>0.9</version>
-    </dependency>
-    <dependency>
-      <groupId>com.opengamma.external.json</groupId>
-      <artifactId>json</artifactId>
-      <version>1.0.0.v20101106</version>
     </dependency>  
     <dependency>
       <groupId>org.testng</groupId>
@@ -324,6 +319,11 @@
       <groupId>commons-cli</groupId>
       <artifactId>commons-cli</artifactId>
       <version>1.2</version>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.datatype</groupId>
+      <artifactId>jackson-datatype-json-org</artifactId>
+      <version>2.4.0</version>
     </dependency>
   </dependencies>
   <profiles>
