--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
   <groupId>com.jimmoores</groupId>
   <artifactId>quandl</artifactId>
-  <version>1.4.1</version>
+  <version>1.5.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>Quandl4J</name>
