--- a/.settings/org.eclipse.jdt.ui.prefs
+++ b/.settings/org.eclipse.jdt.ui.prefs
@@ -58,5 +58,5 @@ cleanup.use_type_arguments=false
 cleanup_profile=_eclipse-cs quandl
 cleanup_settings_version=2
 eclipse.preferences.version=1
-formatter_profile=_eclipse-cs quandl
+formatter_profile=_McLeod Moores XL4J
 formatter_settings_version=12
