--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,7 @@
     <tests.testng.excludedgroups>integration,unitslow</tests.testng.excludedgroups>
     <maven-compiler-plugin.version>3.1</maven-compiler-plugin.version>
     <maven.compiler.compilerVersion>1.7</maven.compiler.compilerVersion>
-    <!--maven.compiler.source>1.7</maven.compiler.source-->
+    <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>  
     <gpg.skip>true</gpg.skip>
   </properties>
@@ -283,9 +283,9 @@
       <!--scope>provided</scope-->
     </dependency>
     <dependency>
-      <groupId>net.sf.opencsv</groupId>
+      <groupId>com.opencsv</groupId>
       <artifactId>opencsv</artifactId>
-      <version>2.3</version>
+      <version>4.0</version>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.datatype</groupId>
