--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,11 @@
 hs_err_pid*
 
 /target/
+
+# eclipse
+.classpath
+.settings/
+core/.classpath
+core/.settings/
+tablesaw/.classpath
+tablesaw/.settings/
