Refactor to allow requests to be accessed when processing response to allow, for example, meaningful titles to be generated for tables. Removed various eclipse files, added checkstyle file and ran through checkstyle for whole project (slightly customised). Added loads of JavaDocs, corrected hundreds of warnings, etc.  After some battling, managed to keep existing source compatibility with existing 1.x API by disconnecting some interfaces from new class heirarchy and using adapters.

--- a/.gitignore
+++ b/.gitignore
@@ -15,8 +15,8 @@ hs_err_pid*
 
 # eclipse
 .classpath
-.settings/
+.settings
 core/.classpath
-core/.settings/
+core/.settings
 tablesaw/.classpath
-tablesaw/.settings/
+tablesaw/.settings
