--- a/tablesaw/pom.xml
+++ b/tablesaw/pom.xml
@@ -9,7 +9,7 @@
 	<artifactId>quandl-tablesaw</artifactId>
 	<packaging>jar</packaging>
 
-	<name>Quandl4J TableSaw</name>
+	<name>Quandl4J with TableSaw support</name>
 	<description>Quandl4J TableSaw Module</description>
 	<url>http://quandl4j.org</url>
 
@@ -32,6 +32,24 @@
 			<groupId>tech.tablesaw</groupId>
 			<artifactId>tablesaw-core</artifactId>
 			<version>0.8.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.testng</groupId>
+			<artifactId>testng</artifactId>
+			<version>6.8.8</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>commons-cli</groupId>
+			<artifactId>commons-cli</artifactId>
+			<version>1.4</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.2.3</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 </project>
