--- a/tablesaw/pom.xml
+++ b/tablesaw/pom.xml
@@ -31,7 +31,13 @@
 		<dependency>
 			<groupId>tech.tablesaw</groupId>
 			<artifactId>tablesaw-core</artifactId>
-			<version>0.9.0</version>
+			<version>0.9.2</version>
+		</dependency>
+		<dependency>
+			<groupId>tech.tablesaw</groupId>
+			<artifactId>tablesaw-plot</artifactId>
+			<version>0.9.2</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.testng</groupId>
