--- a/core/pom.xml
+++ b/core/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.jimmoores</groupId>
 		<artifactId>quandl</artifactId>
-		<version>2.0.0</version>
+		<version>2.1.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>quandl-core</artifactId>
 	<packaging>jar</packaging>
