--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,7 @@
         <tests.testng.threads>1</tests.testng.threads>
         <tests.testng.includedgroups>unit</tests.testng.includedgroups>
         <tests.testng.excludedgroups>integration,unitslow</tests.testng.excludedgroups>
-        <maven-compiler-plugin.version>3.1</maven-compiler-plugin.version>
+        <maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
         <maven.compiler.compilerVersion>1.7</maven.compiler.compilerVersion>
         <!--maven.compiler.source>1.7</maven.compiler.source -->
         <maven.compiler.target>1.7</maven.compiler.target>
@@ -262,6 +262,10 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>${maven-compiler-plugin.version}</version>
+                    <configuration>
+                        <source>1.7</source>
+                        <target>1.7</target>
+                    </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
