--- a/pom.xml
+++ b/pom.xml
@@ -331,6 +331,16 @@
                         </executions>
                         <dependencies>
                             <dependency>
+                                <groupId>com.jimmoores</groupId>
+                                <artifactId>quandl-core</artifactId>
+                                <version>2.0.0</version>
+                            </dependency>
+                            <dependency>
+                                <groupId>com.jimmoores</groupId>
+                                <artifactId>quandl-tablesaw</artifactId>
+                                <version>2.0.0</version>
+                            </dependency>
+                            <dependency>
                                 <groupId>org.codehaus.mojo</groupId>
                                 <artifactId>extra-enforcer-rules</artifactId>
                                 <version>1.0-alpha-5</version>
