--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-/target/
+target/
 
 # eclipse
-/bin/
+bin/
