--- a/core/pom.xml
+++ b/core/pom.xml
@@ -73,5 +73,11 @@
 			<version>1.2.3</version>
 			<scope>test</scope>
 		</dependency>
+		<!-- required in Java9 -->
+		<dependency>
+                        <groupId>javax.activation</groupId>
+                        <artifactId>activation</artifactId>
+                        <version>1.1.1</version>
+                </dependency>
 	</dependencies>
 </project>
