--- a/core/pom.xml
+++ b/core/pom.xml
@@ -46,9 +46,9 @@
 			<!--scope>provided</scope -->
 		</dependency>
 		<dependency>
-			<groupId>net.sf.opencsv</groupId>
+			<groupId>com.opencsv</groupId>
 			<artifactId>opencsv</artifactId>
-			<version>2.3</version>
+			<version>4.2</version>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.datatype</groupId>
