--- a/core/pom.xml
+++ b/core/pom.xml
@@ -51,9 +51,9 @@
 			<version>4.2</version>
 		</dependency>
 		<dependency>
-			<groupId>com.fasterxml.jackson.datatype</groupId>
-			<artifactId>jackson-datatype-json-org</artifactId>
-			<version>2.9.5</version>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20180130</version>
 		</dependency>
 		<dependency>
 			<groupId>org.testng</groupId>
