--- a/core/pom.xml
+++ b/core/pom.xml
@@ -32,18 +32,23 @@
 		<dependency>
 			<groupId>org.glassfish.jersey.core</groupId>
 			<artifactId>jersey-client</artifactId>
-			<version>2.27</version>
+			<version>2.28</version>
 			<!--scope>provided</scope -->
+		</dependency>
+		<dependency>
+    		<groupId>org.glassfish.jersey.inject</groupId>
+    		<artifactId>jersey-hk2</artifactId>
+			<version>2.28</version>
 		</dependency>
 		<dependency>
 			<groupId>com.opencsv</groupId>
 			<artifactId>opencsv</artifactId>
-			<version>4.2</version>
+			<version>4.4</version>
 		</dependency>
 		<dependency>
 			<groupId>org.json</groupId>
 			<artifactId>json</artifactId>
-			<version>20180130</version>
+			<version>20180813</version>
 		</dependency>
 		<dependency>
 			<groupId>org.testng</groupId>
