--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,9 @@ language: java
 jdk:
   - oraclejdk9
   - oraclejdk8
+matrix:
+  include:
+    - jdk: oraclejdk9
+      before_install:
+        - rm "${JAVA_HOME}/lib/security/cacerts"
+        - ln -s /etc/ssl/certs/java/cacerts "${JAVA_HOME}/lib/security/cacerts"
