--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,9 @@
 language: java
 jdk:
-  - oraclejdk9
-  - oraclejdk8
+  - openjdk8
 matrix:
   include:
-    - jdk: oraclejdk9
+    - jdk: openjdk9
       before_install:
         - rm "${JAVA_HOME}/lib/security/cacerts"
         - ln -s /etc/ssl/certs/java/cacerts "${JAVA_HOME}/lib/security/cacerts"
