--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.jimmoores</groupId>
     <artifactId>quandl</artifactId>
-    <version>2.2.1</version>
+    <version>2.2.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <modules>
